--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "contactmanager",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://arshan97.github.io/contactmanager",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
@@ -12,6 +14,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
+    "deploy" : "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
